--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "numpy",
     "pandas",
     "scipy",
-    "xgboost"
+    "xgboost",
+    "sklearn"
 ]
 
 [project.optional-dependencies]
