--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
     "pandas",
     "scipy",
     "xgboost",
-    "sklearn"
+    "scikit-learn"
 ]
 
 [project.optional-dependencies]
